--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -88,7 +88,7 @@ h6 {
   height: auto;
   padding-top: 2rem;
   padding-bottom: 8rem;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../img/pit_anime_1.gif");
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../img/mahe.mp4");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
