--- a/css/nobicomstyle.css
+++ b/css/nobicomstyle.css
@@ -58,6 +58,11 @@ h1, h2, h3, h4, h5, h6 {
   .back-to-top {
     bottom: 15px;
   }
+  .kr1
+  {
+    font-size:120px;
+  }
+  
 }
 
 .back-to-top:focus {
