--- a/css/vyuhastyles.css
+++ b/css/vyuhastyles.css
@@ -40,14 +40,14 @@ header.masthead {
 	font-family: 'Trans',sans-serif;
 	color:#ffeb3b;
 text-align: center;
-	font-size:175px;
+	font-size:10vw;
 	padding-top: 0%;
 }
 .electrical{
 	font-family: 'Birdie',sans-serif;
 	color:#ffffff ;
 	text-align: center;
-	font-size:80px;
+	font-size:7vw;
 	padding-top: 10%;
 }
 
