prayudh major update

--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -76,11 +76,11 @@ header.masthead .masthead-content {
 }
 
 header.masthead .masthead-content .masthead-heading {
-  font-size: 4rem;
+  font-size: 4vw;
 }
 
 header.masthead .masthead-content .masthead-subheading {
-  font-size: 2rem;
+  font-size: 2vw;
 }
 
 header.masthead .bg-circle {
@@ -124,10 +124,10 @@ header.masthead .bg-circle-4 {
     padding-bottom: 10rem;
   }
   header.masthead .masthead-content .masthead-heading {
-    font-size: 6rem;
+    font-size: 6vw;
   }
   header.masthead .masthead-content .masthead-subheading {
-    font-size: 4rem;
+    font-size: 4vw;
   }
 }
 
